# DeepXClaw

./: .deepxclaw.json.example  .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
src/deepxclaw/: __init__.py  app.py  camera.py  detector.py  labels.py  postprocess.py
